@@ -14,14 +14,16 @@ import io.vertx.ext.web.RoutingContext;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.prebid.server.activity.ActivityInfrastructure;
+import org.prebid.server.activity.utils.AccountActivitiesConfigurationUtils;
 import org.prebid.server.auction.IpAddressHelper;
 import org.prebid.server.auction.StoredRequestProcessor;
 import org.prebid.server.auction.TimeoutResolver;
 import org.prebid.server.auction.model.AuctionContext;
-import org.prebid.server.auction.model.DebugContext;
 import org.prebid.server.auction.model.IpAddress;
+import org.prebid.server.auction.model.debug.DebugContext;
 import org.prebid.server.cookie.UidsCookieService;
-import org.prebid.server.deals.DealsPopulator;
+import org.prebid.server.deals.UserAdditionalInfoService;
 import org.prebid.server.deals.model.DeepDebugLog;
 import org.prebid.server.deals.model.TxnLog;
 import org.prebid.server.exception.BlacklistedAccountException;
@@ -73,6 +75,7 @@ public class Ortb2RequestFactory {
     private static final ConditionalLogger UNKNOWN_ACCOUNT_LOGGER = new ConditionalLogger("unknown_account", logger);
 
     private final boolean enforceValidAccount;
+    private final double logSamplingRate;
     private final List<String> blacklistedAccounts;
     private final UidsCookieService uidsCookieService;
     private final RequestValidator requestValidator;
@@ -80,7 +83,7 @@ public class Ortb2RequestFactory {
     private final TimeoutFactory timeoutFactory;
     private final StoredRequestProcessor storedRequestProcessor;
     private final ApplicationSettings applicationSettings;
-    private final DealsPopulator dealsPopulator;
+    private final UserAdditionalInfoService userAdditionalInfoService;
     private final IpAddressHelper ipAddressHelper;
     private final HookStageExecutor hookStageExecutor;
     private final PriceFloorProcessor priceFloorProcessor;
@@ -89,6 +92,7 @@ public class Ortb2RequestFactory {
     private final Clock clock;
 
     public Ortb2RequestFactory(boolean enforceValidAccount,
+                               double logSamplingRate,
                                List<String> blacklistedAccounts,
                                UidsCookieService uidsCookieService,
                                RequestValidator requestValidator,
@@ -98,13 +102,14 @@ public class Ortb2RequestFactory {
                                ApplicationSettings applicationSettings,
                                IpAddressHelper ipAddressHelper,
                                HookStageExecutor hookStageExecutor,
-                               DealsPopulator dealsPopulator,
+                               UserAdditionalInfoService userAdditionalInfoService,
                                PriceFloorProcessor priceFloorProcessor,
                                CountryCodeMapper countryCodeMapper,
                                Metrics metrics,
                                Clock clock) {
 
         this.enforceValidAccount = enforceValidAccount;
+        this.logSamplingRate = logSamplingRate;
         this.blacklistedAccounts = Objects.requireNonNull(blacklistedAccounts);
         this.uidsCookieService = Objects.requireNonNull(uidsCookieService);
         this.requestValidator = Objects.requireNonNull(requestValidator);
@@ -114,7 +119,7 @@ public class Ortb2RequestFactory {
         this.applicationSettings = Objects.requireNonNull(applicationSettings);
         this.ipAddressHelper = Objects.requireNonNull(ipAddressHelper);
         this.hookStageExecutor = Objects.requireNonNull(hookStageExecutor);
-        this.dealsPopulator = dealsPopulator;
+        this.userAdditionalInfoService = userAdditionalInfoService;
         this.priceFloorProcessor = Objects.requireNonNull(priceFloorProcessor);
         this.countryCodeMapper = Objects.requireNonNull(countryCodeMapper);
         this.metrics = Objects.requireNonNull(metrics);
@@ -131,6 +136,7 @@ public class Ortb2RequestFactory {
                 .requestRejected(false)
                 .txnLog(TxnLog.create())
                 .debugHttpCalls(new HashMap<>())
+                .bidRejectionTrackers(new HashMap<>())
                 .build();
     }
 
@@ -143,6 +149,7 @@ public class Ortb2RequestFactory {
                 .httpRequest(httpRequest)
                 .uidsCookie(uidsCookieService.parseFromRequest(httpRequest))
                 .bidRequest(bidRequest)
+                .startTime(startTime)
                 .timeout(timeout(bidRequest, startTime))
                 .deepDebugLog(createDeepDebugLog(bidRequest))
                 .build();
@@ -164,6 +171,18 @@ public class Ortb2RequestFactory {
         return findAccountIdFrom(bidRequest, isLookupStoredRequest)
                 .map(this::validateIfAccountBlacklisted)
                 .compose(accountId -> loadAccount(timeout, httpRequest, accountId));
+    }
+
+    public Future<ActivityInfrastructure> activityInfrastructureFrom(AuctionContext auctionContext) {
+        final Account account = auctionContext.getAccount();
+
+        final ActivityInfrastructure activityInfrastructure = new ActivityInfrastructure(
+                account.getId(),
+                AccountActivitiesConfigurationUtils.parse(account),
+                ObjectUtils.defaultIfNull(auctionContext.getDebugContext().getTraceLevel(), TraceLevel.basic),
+                metrics);
+
+        return Future.succeededFuture(activityInfrastructure);
     }
 
     public Future<BidRequest> validateRequest(BidRequest bidRequest, List<String> warnings) {
@@ -259,9 +278,9 @@ public class Ortb2RequestFactory {
         return stageResult.getPayload().bidRequest();
     }
 
-    public Future<AuctionContext> populateDealsInfo(AuctionContext auctionContext) {
-        return dealsPopulator != null
-                ? dealsPopulator.populate(auctionContext)
+    public Future<AuctionContext> populateUserAdditionalInfo(AuctionContext auctionContext) {
+        return userAdditionalInfoService != null
+                ? userAdditionalInfoService.populate(auctionContext)
                 : Future.succeededFuture(auctionContext);
     }
 
@@ -269,12 +288,43 @@ public class Ortb2RequestFactory {
         return priceFloorProcessor.enrichWithPriceFloors(auctionContext);
     }
 
+    public AuctionContext updateTimeout(AuctionContext auctionContext, long startTime) {
+        final Timeout currentTimeout = auctionContext.getTimeout();
+
+        final BidRequest bidRequest = auctionContext.getBidRequest();
+        final BidRequest resolvedBidRequest = resolveBidRequest(bidRequest);
+        final BidRequest effectiveBidRequest = resolvedBidRequest != null
+                ? resolvedBidRequest
+                : bidRequest;
+
+        final Timeout requestTimeout = timeoutFactory.create(startTime, effectiveBidRequest.getTmax());
+        if (requestTimeout.getDeadline() == currentTimeout.getDeadline()) {
+            return resolvedBidRequest != null
+                    ? auctionContext.with(resolvedBidRequest)
+                    : auctionContext;
+        }
+
+        return auctionContext.toBuilder()
+                .bidRequest(effectiveBidRequest)
+                .timeout(requestTimeout)
+                .build();
+    }
+
+    private BidRequest resolveBidRequest(BidRequest bidRequest) {
+        final Long resolvedTmax = resolveTmax(bidRequest.getTmax());
+        return resolvedTmax != null ? bidRequest.toBuilder().tmax(resolvedTmax).build() : null;
+    }
+
+    private Long resolveTmax(Long requestTimeout) {
+        final long timeout = timeoutResolver.limitToMax(requestTimeout);
+        return !Objects.equals(requestTimeout, timeout) ? timeout : null;
+    }
+
     /**
      * Returns {@link Timeout} based on request.tmax and adjustment value of {@link TimeoutResolver}.
      */
     private Timeout timeout(BidRequest bidRequest, long startTime) {
-        final long resolvedRequestTimeout = timeoutResolver.resolve(bidRequest.getTmax());
-        final long timeout = timeoutResolver.adjustTimeout(resolvedRequestTimeout);
+        final long timeout = timeoutResolver.limitToMax(bidRequest.getTmax());
         return timeoutFactory.create(startTime, timeout);
     }
 
@@ -283,7 +333,7 @@ public class Ortb2RequestFactory {
         return StringUtils.isNotBlank(accountId) || !isLookupStoredRequest
                 ? Future.succeededFuture(accountId)
                 : storedRequestProcessor.processAuctionRequest(accountId, bidRequest)
-                .map(this::accountIdFrom);
+                .map(storedAuctionResult -> accountIdFrom(storedAuctionResult.bidRequest()));
     }
 
     private String validateIfAccountBlacklisted(String accountId) {
@@ -292,8 +342,8 @@ public class Ortb2RequestFactory {
                 && blacklistedAccounts.contains(accountId)) {
 
             throw new BlacklistedAccountException(
-                    String.format("Prebid-server has blacklisted Account ID: %s, please "
-                            + "reach out to the prebid server host.", accountId));
+                    "Prebid-server has blacklisted Account ID: %s, please reach out to the prebid server host."
+                            .formatted(accountId));
         }
         return accountId;
     }
@@ -345,13 +395,12 @@ public class Ortb2RequestFactory {
     }
 
     private Future<Account> responseForEmptyAccount(HttpRequestContext httpRequest) {
-        EMPTY_ACCOUNT_LOGGER.warn(accountErrorMessage("Account not specified", httpRequest), 100);
+        EMPTY_ACCOUNT_LOGGER.warn(accountErrorMessage("Account not specified", httpRequest), logSamplingRate);
         return responseForUnknownAccount(StringUtils.EMPTY);
     }
 
     private static String accountErrorMessage(String message, HttpRequestContext httpRequest) {
-        return String.format(
-                "%s, Url: %s and Referer: %s",
+        return "%s, Url: %s and Referer: %s".formatted(
                 message,
                 httpRequest.getAbsoluteUri(),
                 httpRequest.getHeaders().get(HttpUtil.REFERER_HEADER));
@@ -375,7 +424,7 @@ public class Ortb2RequestFactory {
     private Future<Account> responseForUnknownAccount(String accountId) {
         return enforceValidAccount
                 ? Future.failedFuture(new UnauthorizedAccountException(
-                String.format("Unauthorized account id: %s", accountId), accountId))
+                "Unauthorized account id: " + accountId, accountId))
                 : Future.succeededFuture(Account.empty(accountId));
     }
 
@@ -384,7 +433,7 @@ public class Ortb2RequestFactory {
 
         return account.getStatus() == AccountStatus.inactive
                 ? Future.failedFuture(new UnauthorizedAccountException(
-                String.format("Account %s is inactive", accountId), accountId))
+                "Account %s is inactive".formatted(accountId), accountId))
                 : Future.succeededFuture(account);
     }
 
