@@ -12,8 +12,8 @@ import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -31,7 +31,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class AdkernelBidder implements Bidder<BidRequest> {
 
@@ -66,7 +65,7 @@ public class AdkernelBidder implements Bidder<BidRequest> {
         final BidRequest.BidRequestBuilder requestBuilder = request.toBuilder();
         final List<HttpRequest<BidRequest>> httpRequests = pubToImps.entrySet().stream()
                 .map(extAndImp -> createHttpRequest(extAndImp, requestBuilder, request.getSite(), request.getApp()))
-                .collect(Collectors.toList());
+                .toList();
 
         return Result.of(httpRequests, errors);
     }
@@ -94,8 +93,7 @@ public class AdkernelBidder implements Bidder<BidRequest> {
 
         final Integer zoneId = extImpAdkernel.getZoneId();
         if (zoneId == null || zoneId < 1) {
-            throw new PreBidException(String.format("Invalid zoneId value: %d. Ignoring imp id=%s",
-                    zoneId, imp.getId()));
+            throw new PreBidException("Invalid zoneId value: %d. Ignoring imp id=%s".formatted(zoneId, imp.getId()));
         }
 
         return extImpAdkernel;
@@ -125,9 +123,12 @@ public class AdkernelBidder implements Bidder<BidRequest> {
     }
 
     private HttpRequest<BidRequest> createHttpRequest(Map.Entry<ExtImpAdkernel, List<Imp>> extAndImp,
-                                                      BidRequest.BidRequestBuilder requestBuilder, Site site, App app) {
+                                                      BidRequest.BidRequestBuilder requestBuilder,
+                                                      Site site,
+                                                      App app) {
+
         final ExtImpAdkernel impExt = extAndImp.getKey();
-        final String uri = String.format(endpointTemplate, impExt.getZoneId());
+        final String uri = endpointTemplate.formatted(impExt.getZoneId());
 
         final MultiMap headers = HttpUtil.headers()
                 .add(HttpUtil.X_OPENRTB_VERSION_HEADER, "2.5");
@@ -159,7 +160,7 @@ public class AdkernelBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(httpCall.getRequest().getPayload(), bidResponse));
@@ -173,7 +174,7 @@ public class AdkernelBidder implements Bidder<BidRequest> {
             return Collections.emptyList();
         }
         if (bidResponse.getSeatbid().size() != 1) {
-            throw new PreBidException(String.format("Invalid SeatBids count: %d", bidResponse.getSeatbid().size()));
+            throw new PreBidException("Invalid SeatBids count: " + bidResponse.getSeatbid().size());
         }
         return bidsFromResponse(bidRequest, bidResponse);
     }
@@ -183,7 +184,7 @@ public class AdkernelBidder implements Bidder<BidRequest> {
                 .map(SeatBid::getBid)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getType(bid.getImpid(), bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidType getType(String impId, List<Imp> imps) {
