@@ -7,18 +7,18 @@ import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.ArrayList;
@@ -27,7 +27,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class BidscubeBidder implements Bidder<BidRequest> {
 
@@ -69,17 +68,11 @@ public class BidscubeBidder implements Bidder<BidRequest> {
     private HttpRequest<BidRequest> createRequest(BidRequest request, Imp imp, ObjectNode bidderNode) {
         final Imp internalImp = imp.toBuilder().ext(bidderNode).build();
         final BidRequest internalRequest = request.toBuilder().imp(Collections.singletonList(internalImp)).build();
-        return HttpRequest.<BidRequest>builder()
-                .method(HttpMethod.POST)
-                .uri(endpointUrl)
-                .headers(HttpUtil.headers())
-                .payload(internalRequest)
-                .body(mapper.encodeToBytes(internalRequest))
-                .build();
+        return BidderUtil.defaultRequest(internalRequest, endpointUrl, mapper);
     }
 
     @Override
-    public final Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public final Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         final List<BidderError> errors = new ArrayList<>();
 
         try {
@@ -105,7 +98,7 @@ public class BidscubeBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .map(bid -> constructBidderBid(bid, bidResponse, errors))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidderBid constructBidderBid(Bid bid, BidResponse bidResponse, List<BidderError> errors) {
