@@ -10,15 +10,14 @@ import com.iab.openrtb.request.User;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.improvedigital.proto.ImprovedigitalBidExt;
 import org.prebid.server.bidder.improvedigital.proto.ImprovedigitalBidExtImprovedigital;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -29,6 +28,7 @@ import org.prebid.server.proto.openrtb.ext.request.ConsentedProvidersSettings;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.improvedigital.ExtImpImprovedigital;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 import org.prebid.server.util.ObjectUtil;
 
@@ -37,10 +37,10 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class ImprovedigitalBidder implements Bidder<BidRequest> {
 
+    private static final String URL_PATH_PREFIX_MACRO = "{{PathPrefix}}";
     private static final TypeReference<ExtPrebid<?, ExtImpImprovedigital>> IMPROVEDIGITAL_EXT_TYPE_REFERENCE =
             new TypeReference<>() {
             };
@@ -63,8 +63,8 @@ public class ImprovedigitalBidder implements Bidder<BidRequest> {
 
         for (Imp imp : request.getImp()) {
             try {
-                parseAndValidateImpExt(imp);
-                httpRequests.add(resolveRequest(request, imp));
+                final ExtImpImprovedigital extImp = parseAndValidateImpExt(imp);
+                httpRequests.add(resolveRequest(request, imp, extImp.getPublisherId()));
             } catch (PreBidException e) {
                 errors.add(BidderError.badInput(e.getMessage()));
             }
@@ -116,7 +116,7 @@ public class ImprovedigitalBidder implements Bidder<BidRequest> {
                 mapper.mapper().createObjectNode().set(CONSENTED_PROVIDERS_KEY, arrayNode));
     }
 
-    private void parseAndValidateImpExt(Imp imp) {
+    private ExtImpImprovedigital parseAndValidateImpExt(Imp imp) {
         final ExtImpImprovedigital ext;
         try {
             ext = mapper.mapper().convertValue(imp.getExt(), IMPROVEDIGITAL_EXT_TYPE_REFERENCE).getBidder();
@@ -128,9 +128,10 @@ public class ImprovedigitalBidder implements Bidder<BidRequest> {
         if (placementId == null) {
             throw new PreBidException("No placementId provided");
         }
+        return ext;
     }
 
-    private HttpRequest<BidRequest> resolveRequest(BidRequest bidRequest, Imp imp) {
+    private HttpRequest<BidRequest> resolveRequest(BidRequest bidRequest, Imp imp, Integer publisherId) {
         final User user = bidRequest.getUser();
         final BidRequest modifiedRequest = bidRequest.toBuilder()
                 .imp(Collections.singletonList(imp))
@@ -139,17 +140,15 @@ public class ImprovedigitalBidder implements Bidder<BidRequest> {
                         : null)
                 .build();
 
-        return HttpRequest.<BidRequest>builder()
-                .method(HttpMethod.POST)
-                .uri(endpointUrl)
-                .headers(HttpUtil.headers())
-                .payload(modifiedRequest)
-                .body(mapper.encodeToBytes(modifiedRequest))
-                .build();
+        final String pathPrefix = publisherId != null && publisherId > 0
+                ? String.format("%d/", publisherId) : "";
+
+        final String endpointUrl = this.endpointUrl.replace(URL_PATH_PREFIX_MACRO, pathPrefix);
+        return BidderUtil.defaultRequest(modifiedRequest, endpointUrl, mapper);
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(httpCall.getRequest().getPayload(), bidResponse));
@@ -163,8 +162,8 @@ public class ImprovedigitalBidder implements Bidder<BidRequest> {
             return Collections.emptyList();
         }
         if (bidResponse.getSeatbid().size() > 1) {
-            throw new PreBidException(String.format("Unexpected SeatBid! Must be only one but have: %d",
-                    bidResponse.getSeatbid().size()));
+            throw new PreBidException(
+                    "Unexpected SeatBid! Must be only one but have: " + bidResponse.getSeatbid().size());
         }
         return bidsFromResponse(bidRequest, bidResponse);
     }
@@ -178,7 +177,7 @@ public class ImprovedigitalBidder implements Bidder<BidRequest> {
                 .map(bid -> BidderBid.of(bidWithDealId(bid), getBidType(bid.getImpid(), bidRequest.getImp()),
                         bidResponse.getCur()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Bid bidWithDealId(Bid bid) {
@@ -218,9 +217,9 @@ public class ImprovedigitalBidder implements Bidder<BidRequest> {
                 if (imp.getXNative() != null) {
                     return BidType.xNative;
                 }
-                throw new PreBidException(String.format("Unknown impression type for ID: \"%s\"", impId));
+                throw new PreBidException("Unknown impression type for ID: \"%s\"".formatted(impId));
             }
         }
-        throw new PreBidException(String.format("Failed to find impression for ID: \"%s\"", impId));
+        throw new PreBidException("Failed to find impression for ID: \"%s\"".formatted(impId));
     }
 }
