@@ -5,12 +5,11 @@ import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -19,13 +18,13 @@ import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.mobilefuse.ExtImpMobilefuse;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class MobilefuseBidder implements Bidder<BidRequest> {
 
@@ -71,13 +70,7 @@ public class MobilefuseBidder implements Bidder<BidRequest> {
 
         final BidRequest outgoingRequest = request.toBuilder().imp(Collections.singletonList(requestImp)).build();
 
-        return Result.withValue(HttpRequest.<BidRequest>builder()
-                .method(HttpMethod.POST)
-                .uri(makeUrl(firstExtImpMobilefuse))
-                .headers(HttpUtil.headers())
-                .payload(outgoingRequest)
-                .body(mapper.encodeToBytes(outgoingRequest))
-                .build());
+        return Result.withValue(BidderUtil.defaultRequest(outgoingRequest, makeUrl(firstExtImpMobilefuse), mapper));
     }
 
     private ExtImpMobilefuse parseImpExt(Imp imp) {
@@ -105,15 +98,14 @@ public class MobilefuseBidder implements Bidder<BidRequest> {
     }
 
     private String makeUrl(ExtImpMobilefuse extImpMobilefuse) {
-        final String baseUrl = String.format("%s%s", endpointUrl,
-                Objects.toString(extImpMobilefuse.getPublisherId(), "0"));
+        final String baseUrl = endpointUrl + Objects.toString(extImpMobilefuse.getPublisherId(), "0");
         return "ext".equals(extImpMobilefuse.getTagidSrc())
-                ? String.format("%s%s", baseUrl, "&tagid_src=ext")
+                ? baseUrl + "&tagid_src=ext"
                 : baseUrl;
     }
 
     @Override
-    public final Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public final Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(httpCall.getRequest().getPayload(), bidResponse));
@@ -136,7 +128,7 @@ public class MobilefuseBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getBidType(bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected BidType getBidType(List<Imp> imps) {
