@@ -7,13 +7,12 @@ import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -24,6 +23,7 @@ import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.synacormedia.ExtImpSynacormedia;
 import org.prebid.server.proto.openrtb.ext.request.synacormedia.ExtRequestSynacormedia;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.ArrayList;
@@ -31,7 +31,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class SynacormediaBidder implements Bidder<BidRequest> {
 
@@ -58,7 +57,7 @@ public class SynacormediaBidder implements Bidder<BidRequest> {
             try {
                 extImpSynacormedia = parseAndValidateExtImp(imp.getExt());
             } catch (PreBidException e) {
-                errors.add(BidderError.badInput(String.format("Invalid Impression: %s", e.getMessage())));
+                errors.add(BidderError.badInput("Invalid Impression: " + e.getMessage()));
                 continue;
             }
 
@@ -80,13 +79,10 @@ public class SynacormediaBidder implements Bidder<BidRequest> {
                 .build();
 
         return Result.of(Collections.singletonList(
-                        HttpRequest.<BidRequest>builder()
-                                .method(HttpMethod.POST)
-                                .headers(HttpUtil.headers())
-                                .uri(endpointUrl.replaceAll("\\{\\{Host}}", firstExtImp.getSeatId()))
-                                .body(mapper.encodeToBytes(outgoingRequest))
-                                .payload(outgoingRequest)
-                                .build()),
+                        BidderUtil.defaultRequest(
+                                outgoingRequest,
+                                endpointUrl.replaceAll("\\{\\{Host}}", firstExtImp.getSeatId()),
+                                mapper)),
                 errors);
     }
 
@@ -109,7 +105,7 @@ public class SynacormediaBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(bidResponse, httpCall.getRequest().getPayload()));
@@ -131,7 +127,7 @@ public class SynacormediaBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .map(bid -> mapBidToBidderBid(bid, bidRequest.getImp(), bidResponse.getCur()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidderBid mapBidToBidderBid(Bid bid, List<Imp> imps, String currency) {
