@@ -5,14 +5,13 @@ import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.http.client.utils.URIBuilder;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.bidder.tappx.model.TappxBidderExt;
@@ -23,7 +22,7 @@ import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.tappx.ExtImpTappx;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
-import org.prebid.server.util.HttpUtil;
+import org.prebid.server.util.BidderUtil;
 
 import java.math.BigDecimal;
 import java.net.URISyntaxException;
@@ -34,7 +33,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class TappxBidder implements Bidder<BidRequest> {
 
@@ -98,7 +96,7 @@ public class TappxBidder implements Bidder<BidRequest> {
         try {
             uriBuilder = new URIBuilder(baseUri);
         } catch (URISyntaxException e) {
-            throw new PreBidException(String.format("Failed to build endpoint URL: %s", e.getMessage()));
+            throw new PreBidException("Failed to build endpoint URL: " + e.getMessage());
         }
 
         if (!isNewEndpoint) {
@@ -110,7 +108,7 @@ public class TappxBidder implements Bidder<BidRequest> {
         uriBuilder.addParameter("v", VERSION);
         uriBuilder.addParameter("type_cnn", TYPE_CNN);
 
-        if (test != null && test == 0) {
+        if (!BidderUtil.isNullOrZero(test)) {
             uriBuilder.addParameter("ts", String.valueOf(clock.millis()));
         }
 
@@ -154,17 +152,11 @@ public class TappxBidder implements Bidder<BidRequest> {
     }
 
     private HttpRequest<BidRequest> makeHttpRequest(BidRequest request, String endpointUrl) {
-        return HttpRequest.<BidRequest>builder()
-                .method(HttpMethod.POST)
-                .headers(HttpUtil.headers())
-                .uri(endpointUrl)
-                .body(mapper.encodeToBytes(request))
-                .payload(request)
-                .build();
+        return BidderUtil.defaultRequest(request, endpointUrl, mapper);
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(httpCall.getRequest().getPayload(), bidResponse));
@@ -184,7 +176,7 @@ public class TappxBidder implements Bidder<BidRequest> {
                 .map(SeatBid::getBid)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getBidType(bid.getImpid(), bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidType getBidType(String impId, List<Imp> imps) {
