@@ -5,12 +5,11 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.Bid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.bidder.visx.model.VisxBid;
@@ -20,6 +19,7 @@ import org.prebid.server.exception.PreBidException;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.Collection;
@@ -27,7 +27,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class VisxBidder implements Bidder<BidRequest> {
 
@@ -49,13 +48,7 @@ public class VisxBidder implements Bidder<BidRequest> {
 
     private HttpRequest<BidRequest> makeRequest(BidRequest bidRequest) {
         final BidRequest outgoingRequest = modifyRequest(bidRequest);
-        return HttpRequest.<BidRequest>builder()
-                .method(HttpMethod.POST)
-                .uri(endpointUrl)
-                .body(mapper.encodeToBytes(outgoingRequest))
-                .headers(HttpUtil.headers())
-                .payload(outgoingRequest)
-                .build();
+        return BidderUtil.defaultRequest(outgoingRequest, endpointUrl, mapper);
     }
 
     private BidRequest modifyRequest(BidRequest bidRequest) {
@@ -65,7 +58,7 @@ public class VisxBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final VisxResponse visxResponse = mapper.decodeValue(httpCall.getResponse().getBody(), VisxResponse.class);
             return Result.withValues(extractBids(httpCall.getRequest().getPayload(), visxResponse));
@@ -88,7 +81,7 @@ public class VisxBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(visxBid -> toBidderBid(bidRequest, visxBid))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidderBid toBidderBid(BidRequest bidRequest, VisxBid visxBid) {
@@ -137,9 +130,9 @@ public class VisxBidder implements Bidder<BidRequest> {
                 if (imp.getVideo() != null) {
                     return BidType.video;
                 }
-                throw new PreBidException(String.format("Unknown impression type for ID: \"%s\"", impId));
+                throw new PreBidException("Unknown impression type for ID: \"%s\"".formatted(impId));
             }
         }
-        throw new PreBidException(String.format("Failed to find impression for ID: \"%s\"", impId));
+        throw new PreBidException("Failed to find impression for ID: \"%s\"".formatted(impId));
     }
 }
