@@ -1,6 +1,7 @@
 package org.prebid.server.floors;
 
 import com.fasterxml.jackson.core.JsonPointer;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.iab.openrtb.request.App;
@@ -34,9 +35,12 @@ import org.prebid.server.floors.model.PriceFloorResult;
 import org.prebid.server.floors.model.PriceFloorRules;
 import org.prebid.server.floors.model.PriceFloorSchema;
 import org.prebid.server.geolocation.CountryCodeMapper;
+import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.metric.MetricName;
 import org.prebid.server.metric.Metrics;
+import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebid;
+import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebidFloors;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidChannel;
@@ -54,6 +58,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.Spliterator;
 import java.util.Spliterators;
@@ -78,18 +83,24 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
     private static final Set<String> PHONE_PATTERNS = Set.of("Phone", "iPhone", "Android.*Mobile", "Mobile.*Android");
     private static final Set<String> TABLET_PATTERNS = Set.of("tablet", "iPad", "Windows NT.*touch",
             "touch.*Windows NT", "Android");
+    private static final String GPID_PATH = "/gpid";
+    private static final String PBADSLOT_PATH = "/data/pbadslot";
+    private static final String STORED_REQUEST_ID_PATH = "/prebid/storedrequest/id";
 
     private final CurrencyConversionService currencyConversionService;
     private final CountryCodeMapper countryCodeMapper;
     private final Metrics metrics;
+    private final JacksonMapper mapper;
 
     public BasicPriceFloorResolver(CurrencyConversionService currencyConversionService,
                                    CountryCodeMapper countryCodeMapper,
-                                   Metrics metrics) {
+                                   Metrics metrics,
+                                   JacksonMapper mapper) {
 
         this.currencyConversionService = Objects.requireNonNull(currencyConversionService);
         this.countryCodeMapper = Objects.requireNonNull(countryCodeMapper);
         this.metrics = Objects.requireNonNull(metrics);
+        this.mapper = Objects.requireNonNull(mapper);
     }
 
     @Override
@@ -134,11 +145,10 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
                 : getDataCurrency(floorRules);
 
         try {
-            return resolveResult(floor, rule, floorForRule, bidRequest, floorCurrency);
+            return resolveResult(floor, rule, floorForRule, imp, bidRequest, floorCurrency, warnings);
         } catch (PreBidException e) {
-            final String logMessage =
-                    String.format("Error occurred while resolving floor for imp: %s, cause: %s",
-                            imp.getId(), e.getMessage());
+            final String logMessage = "Error occurred while resolving floor for imp: %s, cause: %s"
+                    .formatted(imp.getId(), e.getMessage());
             if (warnings != null) {
                 warnings.add(logMessage);
             }
@@ -179,7 +189,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
         return schema.getFields().stream()
                 .map(field -> toFieldValues(field, bidRequest, imp, mediaType, format))
                 .map(BasicPriceFloorResolver::prepareFieldValues)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> toFieldValues(PriceFloorField field,
@@ -192,32 +202,20 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
                 ? Collections.singletonList(mediaType)
                 : mediaTypesFromImp(imp);
 
-        switch (field) {
-            case siteDomain:
-                return siteDomainFromRequest(bidRequest);
-            case pubDomain:
-                return pubDomainFromRequest(bidRequest);
-            case domain:
-                return domainFromRequest(bidRequest);
-            case bundle:
-                return bundleFromRequest(bidRequest);
-            case channel:
-                return channelFromRequest(bidRequest);
-            case mediaType:
-                return mediaTypeToRuleKey(resolvedMediaTypes);
-            case size:
-                return sizeFromFormat(ObjectUtils.defaultIfNull(format, resolveFormatFromImp(imp, resolvedMediaTypes)));
-            case gptSlot:
-                return gptAdSlotFromImp(imp);
-            case pbAdSlot:
-                return pbAdSlotFromImp(imp);
-            case country:
-                return countryFromRequest(bidRequest);
-            case deviceType:
-                return resolveDeviceTypeFromRequest(bidRequest);
-            default:
-                throw new IllegalStateException("Unknown field type");
-        }
+        return switch (field) {
+            case siteDomain -> siteDomainFromRequest(bidRequest);
+            case pubDomain -> pubDomainFromRequest(bidRequest);
+            case domain -> domainFromRequest(bidRequest);
+            case bundle -> bundleFromRequest(bidRequest);
+            case channel -> channelFromRequest(bidRequest);
+            case mediaType -> mediaTypeToRuleKey(resolvedMediaTypes);
+            case size ->
+                    sizeFromFormat(ObjectUtils.defaultIfNull(format, resolveFormatFromImp(imp, resolvedMediaTypes)));
+            case gptSlot -> gptAdSlotFromImp(imp);
+            case adUnitCode -> adUnitCodeFromImp(imp);
+            case country -> countryFromRequest(bidRequest);
+            case deviceType -> resolveDeviceTypeFromRequest(bidRequest);
+        };
     }
 
     private static List<ImpMediaType> mediaTypesFromImp(Imp imp) {
@@ -360,7 +358,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
 
     private static List<String> sizeFromFormat(Format size) {
         final String sizeRuleKey = size != null
-                ? String.format("%dx%d", size.getW(), size.getH())
+                ? "%dx%d".formatted(size.getW(), size.getH())
                 : WILDCARD_CATCH_ALL;
 
         return Collections.singletonList(sizeRuleKey);
@@ -382,17 +380,41 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
         return Collections.singletonList(gptAdSlot);
     }
 
-    private static List<String> pbAdSlotFromImp(Imp imp) {
+    private static List<String> adUnitCodeFromImp(Imp imp) {
         final ObjectNode impExt = imp.getExt();
-
+        final String tagId = imp.getTagid();
         if (impExt == null) {
-            return null;
+            return catchAllIfBlank(tagId);
         }
 
-        final JsonNode adSlotNode = impExt.at(PB_ADSLOT_POINTER);
-        final String adSlot = !adSlotNode.isMissingNode() ? adSlotNode.asText() : null;
+        final String gpid = stringByPath(impExt, GPID_PATH);
+        if (StringUtils.isNotBlank(gpid)) {
+            return Collections.singletonList(gpid);
+        }
 
-        return Collections.singletonList(adSlot);
+        if (StringUtils.isNotBlank(tagId)) {
+            return Collections.singletonList(tagId);
+        }
+
+        final String adSlot = stringByPath(impExt, PBADSLOT_PATH);
+        if (StringUtils.isNotBlank(adSlot)) {
+            return Collections.singletonList(adSlot);
+        }
+
+        final String storedRequestId = stringByPath(impExt, STORED_REQUEST_ID_PATH);
+
+        return catchAllIfBlank(storedRequestId);
+    }
+
+    private static List<String> catchAllIfBlank(String value) {
+        return StringUtils.isNotBlank(value)
+                ? Collections.singletonList(value)
+                : Collections.singletonList(WILDCARD_CATCH_ALL);
+    }
+
+    private static String stringByPath(ObjectNode node, String path) {
+        final JsonNode gpidNode = node.at(path);
+        return !gpidNode.isMissingNode() ? gpidNode.asText() : null;
     }
 
     private List<String> countryFromRequest(BidRequest bidRequest) {
@@ -432,7 +454,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
         final List<String> preparedFieldValues = CollectionUtils.emptyIfNull(fieldValues).stream()
                 .filter(StringUtils::isNotEmpty)
                 .map(String::toLowerCase)
-                .collect(Collectors.toList());
+                .toList();
 
         if (CollectionUtils.isEmpty(preparedFieldValues)) {
             return Collections.singletonList(WILDCARD_CATCH_ALL);
@@ -463,23 +485,29 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
     private PriceFloorResult resolveResult(BigDecimal floor,
                                            String rule,
                                            BigDecimal floorForRule,
+                                           Imp imp,
                                            BidRequest bidRequest,
-                                           String rulesCurrency) {
+                                           String rulesCurrency,
+                                           List<String> warnings) {
 
         if (floor == null) {
             return null;
         }
 
-        final PriceFloorRules floorRules = extractRules(bidRequest);
-        final BigDecimal floorMin = ObjectUtil.getIfNotNull(floorRules, PriceFloorRules::getFloorMin);
-        final String floorMinCur = ObjectUtil.getIfNotNull(floorRules, PriceFloorRules::getFloorMinCur);
+        final Price floorMinValues = resolveFloorMin(bidRequest, imp, warnings);
+        final BigDecimal floorMin = floorMinValues.getValue();
+        final String floorMinCur = floorMinValues.getCurrency();
 
         final String effectiveRulesCurrency = ObjectUtils.defaultIfNull(rulesCurrency, DEFAULT_RULES_CURRENCY);
         final String effectiveFloorMinCurrency =
                 ObjectUtils.firstNonNull(floorMinCur, rulesCurrency, DEFAULT_RULES_CURRENCY);
 
         final BigDecimal convertedFloorMinValue = !StringUtils.equals(effectiveRulesCurrency, effectiveFloorMinCurrency)
-                ? convertCurrency(floorMin, bidRequest, effectiveFloorMinCurrency, effectiveRulesCurrency)
+                ? currencyConversionService.convertCurrency(
+                floorMin,
+                bidRequest,
+                effectiveFloorMinCurrency,
+                effectiveRulesCurrency)
                 : null;
 
         final Price effectiveFloor = Price.of(effectiveRulesCurrency, floor);
@@ -488,23 +516,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
                 ? Price.of(effectiveRulesCurrency, convertedFloorMinValue)
                 : Price.of(effectiveFloorMinCurrency, floorMin);
 
-        final BigDecimal floorValue = effectiveFloor.getValue();
-        final String floorCurrency = effectiveFloor.getCurrency();
-
-        final BigDecimal floorMinValue = convertedFloorMin.getValue();
-        final String floorMinCurrency = convertedFloorMin.getCurrency();
-
-        final Price resolvedPrice;
-        if (StringUtils.equals(floorCurrency, floorMinCurrency) && floorValue != null && floorMinValue != null) {
-            if (floorValue.compareTo(floorMinValue) > 0) {
-                resolvedPrice = roundPrice(effectiveFloor);
-            } else {
-                resolvedPrice = roundPrice(convertedFloorMin);
-            }
-        } else {
-            resolvedPrice = roundPrice(ObjectUtils.defaultIfNull(effectiveFloor, effectiveFloorMin));
-        }
-
+        final Price resolvedPrice = resolvePrice(effectiveFloor, convertedFloorMin, effectiveFloorMin);
         return PriceFloorResult.of(
                 rule,
                 floorForRule,
@@ -512,23 +524,66 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
                 ObjectUtil.getIfNotNull(resolvedPrice, Price::getCurrency));
     }
 
-    private static PriceFloorRules extractRules(BidRequest bidRequest) {
-        final ExtRequest extRequest = ObjectUtil.getIfNotNull(bidRequest, BidRequest::getExt);
-        final ExtRequestPrebid extPrebid = ObjectUtil.getIfNotNull(extRequest, ExtRequest::getPrebid);
+    private Price resolveFloorMin(BidRequest bidRequest, Imp imp, List<String> warnings) {
+        final Optional<ExtImpPrebidFloors> extImpPrebidFloors = Optional.ofNullable(imp.getExt())
+                .map(ext -> ext.get("prebid"))
+                .map(this::extImpPrebid)
+                .map(ExtImpPrebid::getFloors);
+        final BigDecimal impFloorMin = extImpPrebidFloors
+                .map(ExtImpPrebidFloors::getFloorMin)
+                .orElse(null);
+        final String impFloorMinCur = extImpPrebidFloors
+                .map(ExtImpPrebidFloors::getFloorMinCur)
+                .orElse(null);
 
-        return ObjectUtil.getIfNotNull(extPrebid, ExtRequestPrebid::getFloors);
+        final Optional<PriceFloorRules> floorRules = extractRules(bidRequest);
+        final BigDecimal requestFloorMin = floorRules.map(PriceFloorRules::getFloorMin).orElse(null);
+        final String requestFloorMinCur = floorRules.map(PriceFloorRules::getFloorMinCur).orElse(null);
+
+        if (ObjectUtils.allNotNull(impFloorMinCur, requestFloorMinCur)
+                && !impFloorMinCur.equals(requestFloorMinCur)) {
+            warnings.add("imp[].ext.prebid.floors.floorMinCur and ext.prebid.floors.floorMinCur has different values");
+        }
+
+        return Price.of(
+                ObjectUtils.defaultIfNull(impFloorMinCur, requestFloorMinCur),
+                ObjectUtils.defaultIfNull(impFloorMin, requestFloorMin));
     }
 
-    private BigDecimal convertCurrency(BigDecimal floor,
-                                       BidRequest bidRequest,
-                                       String currentCurrency,
-                                       String desiredCurrency) {
+    private ExtImpPrebid extImpPrebid(JsonNode extImpPrebid) {
+        try {
+            return mapper.mapper().treeToValue(extImpPrebid, ExtImpPrebid.class);
+        } catch (JsonProcessingException e) {
+            throw new PreBidException("Error decoding imp.ext.prebid: " + e.getMessage(), e);
+        }
+    }
 
-        return currencyConversionService.convertCurrency(floor, bidRequest, currentCurrency, desiredCurrency);
+    private static Optional<PriceFloorRules> extractRules(BidRequest bidRequest) {
+        return Optional.ofNullable(bidRequest)
+                .map(BidRequest::getExt)
+                .map(ExtRequest::getPrebid)
+                .map(ExtRequestPrebid::getFloors);
     }
 
     private static Price roundPrice(Price price) {
         return price != null ? Price.of(price.getCurrency(), BidderUtil.roundFloor(price.getValue())) : null;
+    }
+
+    private static Price resolvePrice(Price floor, Price convertedFloorMin, Price floorMin) {
+        final BigDecimal floorValue = ObjectUtil.getIfNotNull(floor, Price::getValue);
+        final String floorCurrency = ObjectUtil.getIfNotNull(floor, Price::getCurrency);
+
+        final BigDecimal floorMinValue = ObjectUtil.getIfNotNull(convertedFloorMin, Price::getValue);
+        final String floorMinCurrency = ObjectUtil.getIfNotNull(floor, Price::getCurrency);
+
+        if (StringUtils.equals(floorCurrency, floorMinCurrency) && floorValue != null && floorMinValue != null) {
+
+            return floorValue.compareTo(floorMinValue) > 0
+                    ? roundPrice(floor)
+                    : roundPrice(convertedFloorMin);
+        }
+
+        return roundPrice(ObjectUtils.defaultIfNull(floor, floorMin));
     }
 
     private static class RuleKeyCandidateIterator implements Iterator<String> {
@@ -590,14 +645,14 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
             return IntStream.range(0, desiredRuleKey.size())
                     .filter(i -> desiredRuleKey.get(i).get(0).equals(WILDCARD_CATCH_ALL))
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         private Iterator<String> createIterator(int wildcardNum, List<List<String>> desiredRuleKey, String delimiter) {
             final int ruleSegmentsNum = desiredRuleKey.size();
 
             return asStream(CombinatoricsUtils.combinationsIterator(ruleSegmentsNum, wildcardNum))
-                    .map(combination -> IntStream.of(combination).boxed().collect(Collectors.toList()))
+                    .map(combination -> IntStream.of(combination).boxed().toList())
                     .filter(combination -> combination.containsAll(implicitWildcardIndexes))
                     .sorted(Comparator.comparingInt(combination -> calculateWeight(combination, ruleSegmentsNum)))
                     .flatMap(combination -> combinationToCandidate(combination, desiredRuleKey, delimiter).stream())
@@ -623,7 +678,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
                     .boxed()
                     .map(position -> candidatesForPosition(position, desiredRuleKey, biggestRuleKeySize))
                     .flatMap(Collection::stream)
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (final int positionToReplace : combination) {
                 candidates.forEach(candidate -> candidate.set(positionToReplace, WILDCARD_CATCH_ALL));
@@ -640,7 +695,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
             return desiredRuleKey.get(multPosition).stream()
                     .flatMap(ruleKey -> IntStream.range(0, biggestRuleKeySize)
                             .mapToObj(i -> candidateForPosition(desiredRuleKey, ruleKey, multPosition, i)))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         private static List<String> candidateForPosition(List<List<String>> desiredRuleKey,
@@ -656,7 +711,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
                             return getLastOrNext(desiredRuleKey.get(index), position);
                         }
                     })
-                    .collect(Collectors.toList());
+                    .collect(Collectors.toCollection(ArrayList::new));
         }
 
         private static String getLastOrNext(List<String> ruleKeys, int index) {
