@@ -25,14 +25,13 @@ public class PriceFloorRulesValidator {
 
         final Integer rootSkipRate = priceFloorRules.getSkipRate();
         if (rootSkipRate != null && (rootSkipRate < SKIP_RATE_MIN || rootSkipRate > SKIP_RATE_MAX)) {
-            throw new PreBidException(String.format("Price floor root skipRate "
-                    + "must be in range(0-100), but was %s", rootSkipRate));
+            throw new PreBidException(
+                    "Price floor root skipRate must be in range(0-100), but was " + rootSkipRate);
         }
 
         final BigDecimal floorMin = priceFloorRules.getFloorMin();
         if (floorMin != null && floorMin.compareTo(BigDecimal.ZERO) < 0) {
-            throw new PreBidException(String.format("Price floor floorMin "
-                    + "must be positive float, but was %s", floorMin));
+            throw new PreBidException("Price floor floorMin must be positive float, but was " + floorMin);
         }
 
         validateRulesData(priceFloorRules.getData(), maxRules);
@@ -45,8 +44,8 @@ public class PriceFloorRulesValidator {
 
         final Integer dataSkipRate = priceFloorData.getSkipRate();
         if (dataSkipRate != null && (dataSkipRate < SKIP_RATE_MIN || dataSkipRate > SKIP_RATE_MAX)) {
-            throw new PreBidException(String.format("Price floor data skipRate "
-                    + "must be in range(0-100), but was %s", dataSkipRate));
+            throw new PreBidException(
+                    "Price floor data skipRate must be in range(0-100), but was " + dataSkipRate);
         }
 
         if (CollectionUtils.isEmpty(priceFloorData.getModelGroups())) {
@@ -63,32 +62,31 @@ public class PriceFloorRulesValidator {
         if (modelWeight != null
                 && (modelWeight < MODEL_WEIGHT_MIN_VALUE || modelWeight > MODEL_WEIGHT_MAX_VALUE)) {
 
-            throw new PreBidException(String.format("Price floor modelGroup modelWeight "
-                    + "must be in range(1-100), but was %s", modelWeight));
+            throw new PreBidException(
+                    "Price floor modelGroup modelWeight must be in range(1-100), but was " + modelWeight);
 
         }
 
         final Integer skipRate = modelGroup.getSkipRate();
         if (skipRate != null && (skipRate < SKIP_RATE_MIN || skipRate > SKIP_RATE_MAX)) {
-            throw new PreBidException(String.format("Price floor modelGroup skipRate "
-                    + "must be in range(0-100), but was %s", skipRate));
+            throw new PreBidException(
+                    "Price floor modelGroup skipRate must be in range(0-100), but was " + skipRate);
         }
 
         final BigDecimal defaultPrice = modelGroup.getDefaultFloor();
         if (defaultPrice != null && defaultPrice.compareTo(BigDecimal.ZERO) < 0) {
-            throw new PreBidException(String.format("Price floor modelGroup default "
-                    + "must be positive float, but was %s", defaultPrice));
+            throw new PreBidException(
+                    "Price floor modelGroup default must be positive float, but was " + defaultPrice);
         }
 
         final Map<String, BigDecimal> values = modelGroup.getValues();
         if (MapUtils.isEmpty(values)) {
-            throw new PreBidException(String.format("Price floor rules values can't be null or empty, but were %s",
-                    values));
+            throw new PreBidException("Price floor rules values can't be null or empty, but were " + values);
         }
 
         if (maxRules != null && values.size() > maxRules) {
-            throw new PreBidException(String.format("Price floor rules number %s exceeded its maximum number %s",
-                    values.size(), maxRules));
+            throw new PreBidException(
+                    "Price floor rules number %s exceeded its maximum number %s".formatted(values.size(), maxRules));
         }
     }
 }
