@@ -38,11 +38,11 @@ class HooksMetrics extends UpdatableMetrics {
     }
 
     private static Function<MetricName, String> nameCreator(String prefix) {
-        return metricName -> String.format("%s.%s", prefix, metricName.toString());
+        return metricName -> "%s.%s".formatted(prefix, metricName);
     }
 
     private static String createPrefix(String prefix) {
-        return String.format("%s.%s", prefix, createPrefix());
+        return "%s.%s".formatted(prefix, createPrefix());
     }
 
     private static String createPrefix() {
