@@ -17,8 +17,8 @@ import org.junit.Before;
 import org.junit.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
@@ -29,7 +29,6 @@ import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
 import static java.util.function.Function.identity;
@@ -321,7 +320,7 @@ public class OperaadsBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorIfResponseBodyCouldNotBeParsed() {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null, "invalid");
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null, "invalid");
 
         // when
         final Result<List<BidderBid>> result = operaadsBidder.makeBids(httpCall, null);
@@ -338,7 +337,7 @@ public class OperaadsBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnEmptyListIfBidResponseIsNull() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null, mapper.writeValueAsString(null));
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null, mapper.writeValueAsString(null));
 
         // when
         final Result<List<BidderBid>> result = operaadsBidder.makeBids(httpCall, null);
@@ -351,7 +350,7 @@ public class OperaadsBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnEmptyListIfBidResponseSeatBidIsNull() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null,
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null,
                 mapper.writeValueAsString(BidResponse.builder().build()));
 
         // when
@@ -366,7 +365,7 @@ public class OperaadsBidderTest extends VertxTest {
     public void makeBidsShouldReturnVideoBidIfVideoIsPresentInRequestImpid() throws JsonProcessingException {
         // given
         final BidRequest bidRequest = givenBidRequest(identity());
-        final HttpCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
                 givenBidResponse(bidBuilder -> bidBuilder.impid("imp:id:id:video").price(BigDecimal.ONE))));
 
         // when
@@ -382,7 +381,7 @@ public class OperaadsBidderTest extends VertxTest {
     public void makeBidsShouldReturnNativeBidIfNativeIsPresentInRequestImpid() throws JsonProcessingException {
         // given
         final BidRequest bidRequest = givenBidRequest(identity());
-        final HttpCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
                 givenBidResponse(bidBuilder -> bidBuilder.impid("imp:id:asd:native").price(BigDecimal.ONE))));
 
         // when
@@ -398,7 +397,7 @@ public class OperaadsBidderTest extends VertxTest {
     public void makeBidsShouldReturnBannerBidIfBannerIsPresentInRequestImpid() throws JsonProcessingException {
         // given
         final BidRequest bidRequest = givenBidRequest(identity());
-        final HttpCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
                 givenBidResponse(bidBuilder -> bidBuilder.impid("imp:id:id:banner").price(BigDecimal.ONE))));
 
         // when
@@ -414,7 +413,7 @@ public class OperaadsBidderTest extends VertxTest {
     public void makeBidsShouldOmitBidsWithNullPrice() throws JsonProcessingException {
         // given
         final BidRequest bidRequest = givenBidRequest(identity());
-        final HttpCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
                 givenBidResponse(bidBuilder -> bidBuilder.impid("123").price(null))));
 
         // when
@@ -429,7 +428,7 @@ public class OperaadsBidderTest extends VertxTest {
     public void makeBidsShouldOmitBidsWithPriceLessOrEqualToZero() throws JsonProcessingException {
         // given
         final BidRequest bidRequest = givenBidRequest(identity());
-        final HttpCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest, mapper.writeValueAsString(
                 givenBidResponse(bidBuilder -> bidBuilder.impid("123").price(BigDecimal.valueOf(-1)),
                         bidBuilder -> bidBuilder.impid("123").price(BigDecimal.ZERO))));
 
@@ -448,7 +447,7 @@ public class OperaadsBidderTest extends VertxTest {
         return bidRequestCustomizer.apply(BidRequest.builder()
                         .imp(Arrays.stream(impCustomizers)
                                 .map(OperaadsBidderTest::givenImp)
-                                .collect(Collectors.toList()))
+                                .toList())
                         .device(Device.builder().os("deviceOs").build()))
                 .build();
     }
@@ -469,13 +468,13 @@ public class OperaadsBidderTest extends VertxTest {
                 .seatbid(singletonList(SeatBid.builder()
                         .bid(Arrays.stream(bidCustomizers)
                                 .map(customizer -> customizer.apply(Bid.builder()).build())
-                                .collect(Collectors.toList()))
+                                .toList())
                         .build()))
                 .build();
     }
 
-    private static HttpCall<BidRequest> givenHttpCall(BidRequest bidRequest, String body) {
-        return HttpCall.success(
+    private static BidderCall<BidRequest> givenHttpCall(BidRequest bidRequest, String body) {
+        return BidderCall.succeededHttp(
                 HttpRequest.<BidRequest>builder().payload(bidRequest).build(),
                 HttpResponse.of(200, null, body),
                 null);
